// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when the image has a copyright 1`] = `
<div
  className="src-modules-image-components-image-grid-card__card"
>
  <ImageGridImage
    imageId="some-id"
    ratio={2}
    size="very-small"
    type="venue"
  />
  <div
    className="src-modules-image-components-image-grid-card__details-container"
  >
    <p>
      <strong>
        ©
      </strong>
       
      The Copyright
    </p>
    <div
      className="src-modules-image-components-image-grid-card__toolbar"
    >
      <IconButton
        aria-label="Set as main"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
      <IconButton
        aria-label="Delete"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
      <IconButton
        aria-label="Edit"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly when the image is not the main image 1`] = `
<div
  className="src-modules-image-components-image-grid-card__card"
>
  <ImageGridImage
    imageId="some-id"
    ratio={2}
    size="very-small"
    type="venue"
  />
  <div
    className="src-modules-image-components-image-grid-card__details-container"
  >
    <p
      className="src-modules-image-components-image-grid-card__no-copyright"
    >
      No Copyright String
    </p>
    <div
      className="src-modules-image-components-image-grid-card__toolbar"
    >
      <IconButton
        aria-label="Set as main"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
      <IconButton
        aria-label="Delete"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
      <IconButton
        aria-label="Edit"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly when the image is the main image 1`] = `
<div
  className="src-modules-image-components-image-grid-card__card"
>
  <ImageGridImage
    imageId="some-id"
    ratio={2}
    size="very-small"
    type="venue"
  />
  <div
    className="src-modules-image-components-image-grid-card__details-container"
  >
    <p
      className="src-modules-image-components-image-grid-card__no-copyright"
    >
      No Copyright String
    </p>
    <div
      className="src-modules-image-components-image-grid-card__toolbar"
    >
      <FaHeart
        className="src-modules-image-components-image-grid-card__icon-main src-modules-image-components-image-grid-card__icon"
      />
      <IconButton
        aria-label="Delete"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
      <IconButton
        aria-label="Edit"
        icon={[Function]}
        onClick={[Function]}
        type="default"
      />
    </div>
  </div>
</div>
`;
